k8s/overlay/prod/realtime-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drawio-realtime
  annotations:
    nginx.ingress.kubernetes.io/websocket-services: drawio-realtime
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  rules:
    - host: drawio.fairkom.net
      http:
        paths:
          - path: /rt
            pathType: Prefix
            backend:
              service:
                name: drawio-realtime
                port:
                  number: 8081
          - path: /cache
            pathType: Prefix
            backend:
              service:
                name: drawio-realtime
                port:
                  number: 8081
